--- a/index.html
+++ b/index.html
@@ -2585,6 +2585,202 @@
               </div>
             </div>
           </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
+            <div class="portfolio-wrap">
+              <figure>
+                <img src="img\kids sling\WhatsApp Image 2020-10-02 at 7.13.47 PM.jpeg" class="img-fluid" alt="">
+                <a href="img\kids sling\WhatsApp Image 2020-10-02 at 7.13.47 PM.jpeg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+              </figure>
+
+              <div class="portfolio-info">
+                <h4><a href="#">Purse</a></h4>
+                <p>Purse</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
+            <div class="portfolio-wrap">
+              <figure>
+                <img src="img\kids sling\WhatsApp Image 2020-10-02 at 7.13.48 PM (1).jpeg" class="img-fluid" alt="">
+                <a href="img\kids sling\WhatsApp Image 2020-10-02 at 7.13.48 PM (1).jpeg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+              </figure>
+
+              <div class="portfolio-info">
+                <h4><a href="#">Purse</a></h4>
+                <p>Purse</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
+            <div class="portfolio-wrap">
+              <figure>
+                <img src="img\kids sling\WhatsApp Image 2020-10-02 at 7.13.48 PM.jpeg" class="img-fluid" alt="">
+                <a href="img\kids sling\WhatsApp Image 2020-10-02 at 7.13.48 PM.jpeg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+              </figure>
+
+              <div class="portfolio-info">
+                <h4><a href="#">Purse</a></h4>
+                <p>Purse</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
+            <div class="portfolio-wrap">
+              <figure>
+                <img src="img\kids sling\WhatsApp Image 2020-10-02 at 7.13.49 PM (1).jpeg" class="img-fluid" alt="">
+                <a href="img\kids sling\WhatsApp Image 2020-10-02 at 7.13.49 PM (1).jpeg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+              </figure>
+
+              <div class="portfolio-info">
+                <h4><a href="#">Purse</a></h4>
+                <p>Purse</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
+            <div class="portfolio-wrap">
+              <figure>
+                <img src="img\kids sling\WhatsApp Image 2020-10-02 at 7.13.49 PM.jpeg" class="img-fluid" alt="">
+                <a href="img\kids sling\WhatsApp Image 2020-10-02 at 7.13.49 PM.jpeg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+              </figure>
+
+              <div class="portfolio-info">
+                <h4><a href="#">Purse</a></h4>
+                <p>Purse</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
+            <div class="portfolio-wrap">
+              <figure>
+                <img src="img\kids sling\WhatsApp Image 2020-10-02 at 7.13.50 PM (1).jpeg" class="img-fluid" alt="">
+                <a href="img\kids sling\WhatsApp Image 2020-10-02 at 7.13.50 PM (1).jpeg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+              </figure>
+
+              <div class="portfolio-info">
+                <h4><a href="#">Purse</a></h4>
+                <p>Purse</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
+            <div class="portfolio-wrap">
+              <figure>
+                <img src="img\kids sling\WhatsApp Image 2020-10-02 at 7.13.50 PM.jpeg" class="img-fluid" alt="">
+                <a href="img\kids sling\WhatsApp Image 2020-10-02 at 7.13.50 PM.jpeg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+              </figure>
+
+              <div class="portfolio-info">
+                <h4><a href="#">Purse</a></h4>
+                <p>Purse</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
+            <div class="portfolio-wrap">
+              <figure>
+                <img src="img\kids sling\WhatsApp Image 2020-10-02 at 7.13.51 PM (1).jpeg" class="img-fluid" alt="">
+                <a href="img\kids sling\WhatsApp Image 2020-10-02 at 7.13.51 PM (1).jpeg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+              </figure>
+
+              <div class="portfolio-info">
+                <h4><a href="#">Purse</a></h4>
+                <p>Purse</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
+            <div class="portfolio-wrap">
+              <figure>
+                <img src="img\kids sling\WhatsApp Image 2020-10-02 at 7.13.52 PM (1).jpeg" class="img-fluid" alt="">
+                <a href="img\kids sling\WhatsApp Image 2020-10-02 at 7.13.52 PM (1).jpeg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+              </figure>
+
+              <div class="portfolio-info">
+                <h4><a href="#">Purse</a></h4>
+                <p>Purse</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
+            <div class="portfolio-wrap">
+              <figure>
+                <img src="img\kids sling\WhatsApp Image 2020-10-02 at 7.13.53 PM (1).jpeg" class="img-fluid" alt="">
+                <a href="img\kids sling\WhatsApp Image 2020-10-02 at 7.13.53 PM (1).jpeg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+              </figure>
+
+              <div class="portfolio-info">
+                <h4><a href="#">Purse</a></h4>
+                <p>Purse</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
+            <div class="portfolio-wrap">
+              <figure>
+                <img src="img\kids sling\WhatsApp Image 2020-10-02 at 7.13.53 PM.jpeg" class="img-fluid" alt="">
+                <a href="img\kids sling\WhatsApp Image 2020-10-02 at 7.13.53 PM.jpeg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+              </figure>
+
+              <div class="portfolio-info">
+                <h4><a href="#">Purse</a></h4>
+                <p>Purse</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
+            <div class="portfolio-wrap">
+              <figure>
+                <img src="img\kids sling\WhatsApp Image 2020-10-02 at 7.13.54 PM.jpeg" class="img-fluid" alt="">
+                <a href="img\kids sling\WhatsApp Image 2020-10-02 at 7.13.54 PM.jpeg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+              </figure>
+
+              <div class="portfolio-info">
+                <h4><a href="#">Purse</a></h4>
+                <p>Purse</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
+            <div class="portfolio-wrap">
+              <figure>
+                <img src="img\kids sling\WhatsApp Image 2020-10-02 at 7.17.49 PM.jpeg" class="img-fluid" alt="">
+                <a href="img\kids sling\WhatsApp Image 2020-10-02 at 7.17.49 PM.jpeg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+              </figure>
+
+              <div class="portfolio-info">
+                <h4><a href="#">Purse</a></h4>
+                <p>Purse</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
+            <div class="portfolio-wrap">
+              <figure>
+                <img src="img\kids sling\WhatsApp Image 2020-10-02 at 7.17.50 PM.jpeg" class="img-fluid" alt="">
+                <a href="img\kids sling\WhatsApp Image 2020-10-02 at 7.17.50 PM.jpeg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+              </figure>
+
+              <div class="portfolio-info">
+                <h4><a href="#">Purse</a></h4>
+                <p>Purse</p>
+              </div>
+            </div>
+          </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web wow fadeInUp" data-wow-delay="0.2s">
             <div class="portfolio-wrap">
