--- a/index.html
+++ b/index.html
@@ -2781,6 +2781,160 @@
               </div>
             </div>
           </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
+            <div class="portfolio-wrap">
+              <figure>
+                <img src="img\phone sling\WhatsApp Image 2020-10-02 at 7.18.02 PM.jpeg" class="img-fluid" alt="">
+                <a href="img\phone sling\WhatsApp Image 2020-10-02 at 7.18.02 PM.jpeg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+              </figure>
+
+              <div class="portfolio-info">
+                <h4><a href="#">Purse</a></h4>
+                <p>Purse</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
+            <div class="portfolio-wrap">
+              <figure>
+                <img src="img\phone sling\WhatsApp Image 2020-10-02 at 7.18.03 PM (1).jpeg" class="img-fluid" alt="">
+                <a href="img\phone sling\WhatsApp Image 2020-10-02 at 7.18.03 PM (1).jpeg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+              </figure>
+
+              <div class="portfolio-info">
+                <h4><a href="#">Purse</a></h4>
+                <p>Purse</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
+            <div class="portfolio-wrap">
+              <figure>
+                <img src="img\phone sling\WhatsApp Image 2020-10-02 at 7.18.03 PM.jpeg" class="img-fluid" alt="">
+                <a href="img\phone sling\WhatsApp Image 2020-10-02 at 7.18.03 PM.jpeg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+              </figure>
+
+              <div class="portfolio-info">
+                <h4><a href="#">Purse</a></h4>
+                <p>Purse</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
+            <div class="portfolio-wrap">
+              <figure>
+                <img src="img\phone sling\WhatsApp Image 2020-10-02 at 7.18.17 PM.jpeg" class="img-fluid" alt="">
+                <a href="img\phone sling\WhatsApp Image 2020-10-02 at 7.18.17 PM.jpeg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+              </figure>
+
+              <div class="portfolio-info">
+                <h4><a href="#">Purse</a></h4>
+                <p>Purse</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
+            <div class="portfolio-wrap">
+              <figure>
+                <img src="img\phone sling\WhatsApp Image 2020-10-02 at 7.18.18 PM.jpeg" class="img-fluid" alt="">
+                <a href="img\phone sling\WhatsApp Image 2020-10-02 at 7.18.18 PM.jpeg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+              </figure>
+
+              <div class="portfolio-info">
+                <h4><a href="#">Purse</a></h4>
+                <p>Purse</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
+            <div class="portfolio-wrap">
+              <figure>
+                <img src="img\phone sling\WhatsApp Image 2020-10-02 at 7.18.19 PM (1).jpeg" class="img-fluid" alt="">
+                <a href="img\phone sling\WhatsApp Image 2020-10-02 at 7.18.19 PM (1).jpeg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+              </figure>
+
+              <div class="portfolio-info">
+                <h4><a href="#">Purse</a></h4>
+                <p>Purse</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
+            <div class="portfolio-wrap">
+              <figure>
+                <img src="img\phone sling\WhatsApp Image 2020-10-02 at 7.18.19 PM.jpeg" class="img-fluid" alt="">
+                <a href="img\phone sling\WhatsApp Image 2020-10-02 at 7.18.19 PM.jpeg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+              </figure>
+
+              <div class="portfolio-info">
+                <h4><a href="#">Purse</a></h4>
+                <p>Purse</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
+            <div class="portfolio-wrap">
+              <figure>
+                <img src="img\phone sling\WhatsApp Image 2020-10-02 at 7.18.20 PM (1).jpeg" class="img-fluid" alt="">
+                <a href="img\phone sling\WhatsApp Image 2020-10-02 at 7.18.20 PM (1).jpeg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+              </figure>
+
+              <div class="portfolio-info">
+                <h4><a href="#">Purse</a></h4>
+                <p>Purse</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
+            <div class="portfolio-wrap">
+              <figure>
+                <img src="img\phone sling\WhatsApp Image 2020-10-02 at 7.18.20 PM.jpeg" class="img-fluid" alt="">
+                <a href="img\phone sling\WhatsApp Image 2020-10-02 at 7.18.20 PM.jpeg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+              </figure>
+
+              <div class="portfolio-info">
+                <h4><a href="#">Purse</a></h4>
+                <p>Purse</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
+            <div class="portfolio-wrap">
+              <figure>
+                <img src="img\phone sling\WhatsApp Image 2020-10-02 at 7.18.21 PM (1).jpeg" class="img-fluid" alt="">
+                <a href="img\phone sling\WhatsApp Image 2020-10-02 at 7.18.21 PM (1).jpeg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+              </figure>
+
+              <div class="portfolio-info">
+                <h4><a href="#">Purse</a></h4>
+                <p>Purse</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
+            <div class="portfolio-wrap">
+              <figure>
+                <img src="img\phone sling\WhatsApp Image 2020-10-02 at 7.18.21 PM (2).jpeg" class="img-fluid" alt="">
+                <a href="img\phone sling\WhatsApp Image 2020-10-02 at 7.18.21 PM (2).jpeg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+              </figure>
+
+              <div class="portfolio-info">
+                <h4><a href="#">Purse</a></h4>
+                <p>Purse</p>
+              </div>
+            </div>
+          </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web wow fadeInUp" data-wow-delay="0.2s">
             <div class="portfolio-wrap">
