--- a/index.html
+++ b/index.html
@@ -3463,6 +3463,306 @@
               </div>
             </div>
 
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
+              <div class="portfolio-wrap">
+                <figure>
+                  <img src="img\potli\WhatsApp Image 2020-10-02 at 7.05.43 PM.jpeg" class="img-fluid" alt="">
+                  <a href="img\potli\WhatsApp Image 2020-10-02 at 7.05.43 PM.jpeg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                  <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+                </figure>
+
+                <div class="portfolio-info">
+                  <h4><a href="#">Purse</a></h4>
+                  <p>Purse</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
+              <div class="portfolio-wrap">
+                <figure>
+                  <img src="img\potli\WhatsApp Image 2020-10-02 at 7.05.44 PM (1).jpeg" class="img-fluid" alt="">
+                  <a href="img\potli\WhatsApp Image 2020-10-02 at 7.05.44 PM (1).jpeg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                  <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+                </figure>
+
+                <div class="portfolio-info">
+                  <h4><a href="#">Purse</a></h4>
+                  <p>Purse</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
+              <div class="portfolio-wrap">
+                <figure>
+                  <img src="img\potli\WhatsApp Image 2020-10-02 at 7.05.46 PM (1).jpeg" class="img-fluid" alt="">
+                  <a href="img\potli\WhatsApp Image 2020-10-02 at 7.05.46 PM (1).jpeg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                  <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+                </figure>
+
+                <div class="portfolio-info">
+                  <h4><a href="#">Purse</a></h4>
+                  <p>Purse</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
+              <div class="portfolio-wrap">
+                <figure>
+                  <img src="img\potli\WhatsApp Image 2020-10-02 at 7.05.46 PM.jpeg" class="img-fluid" alt="">
+                  <a href="img\potli\WhatsApp Image 2020-10-02 at 7.05.46 PM.jpeg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                  <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+                </figure>
+
+                <div class="portfolio-info">
+                  <h4><a href="#">Purse</a></h4>
+                  <p>Purse</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
+              <div class="portfolio-wrap">
+                <figure>
+                  <img src="img\potli\WhatsApp Image 2020-10-02 at 7.05.47 PM.jpeg" class="img-fluid" alt="">
+                  <a href="img\potli\WhatsApp Image 2020-10-02 at 7.05.47 PM.jpeg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                  <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+                </figure>
+
+                <div class="portfolio-info">
+                  <h4><a href="#">Purse</a></h4>
+                  <p>Purse</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
+              <div class="portfolio-wrap">
+                <figure>
+                  <img src="img\potli\WhatsApp Image 2020-10-02 at 7.05.48 PM.jpeg" class="img-fluid" alt="">
+                  <a href="img\potli\WhatsApp Image 2020-10-02 at 7.05.48 PM.jpeg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                  <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+                </figure>
+
+                <div class="portfolio-info">
+                  <h4><a href="#">Purse</a></h4>
+                  <p>Purse</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
+              <div class="portfolio-wrap">
+                <figure>
+                  <img src="img\potli\WhatsApp Image 2020-10-02 at 7.05.49 PM (1).jpeg" class="img-fluid" alt="">
+                  <a href="img\potli\WhatsApp Image 2020-10-02 at 7.05.49 PM (1).jpeg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                  <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+                </figure>
+
+                <div class="portfolio-info">
+                  <h4><a href="#">Purse</a></h4>
+                  <p>Purse</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
+              <div class="portfolio-wrap">
+                <figure>
+                  <img src="img\potli\WhatsApp Image 2020-10-02 at 7.05.52 PM (1).jpeg" class="img-fluid" alt="">
+                  <a href="img\potli\WhatsApp Image 2020-10-02 at 7.05.52 PM (1).jpeg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                  <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+                </figure>
+
+                <div class="portfolio-info">
+                  <h4><a href="#">Purse</a></h4>
+                  <p>Purse</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
+              <div class="portfolio-wrap">
+                <figure>
+                  <img src="img\potli\WhatsApp Image 2020-10-02 at 7.05.52 PM.jpeg" class="img-fluid" alt="">
+                  <a href="img\potli\WhatsApp Image 2020-10-02 at 7.05.52 PM.jpeg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                  <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+                </figure>
+
+                <div class="portfolio-info">
+                  <h4><a href="#">Purse</a></h4>
+                  <p>Purse</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
+              <div class="portfolio-wrap">
+                <figure>
+                  <img src="img\potli\WhatsApp Image 2020-10-02 at 7.05.54 PM.jpeg" class="img-fluid" alt="">
+                  <a href="img\potli\WhatsApp Image 2020-10-02 at 7.05.54 PM.jpeg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                  <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+                </figure>
+
+                <div class="portfolio-info">
+                  <h4><a href="#">Purse</a></h4>
+                  <p>Purse</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
+              <div class="portfolio-wrap">
+                <figure>
+                  <img src="img\potli\WhatsApp Image 2020-10-02 at 7.06.05 PM.jpeg" class="img-fluid" alt="">
+                  <a href="img\potli\WhatsApp Image 2020-10-02 at 7.06.05 PM.jpeg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                  <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+                </figure>
+
+                <div class="portfolio-info">
+                  <h4><a href="#">Purse</a></h4>
+                  <p>Purse</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
+              <div class="portfolio-wrap">
+                <figure>
+                  <img src="img\potli\WhatsApp Image 2020-10-02 at 7.06.06 PM (1).jpeg" class="img-fluid" alt="">
+                  <a href="img\potli\WhatsApp Image 2020-10-02 at 7.06.06 PM (1).jpeg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                  <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+                </figure>
+
+                <div class="portfolio-info">
+                  <h4><a href="#">Purse</a></h4>
+                  <p>Purse</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
+              <div class="portfolio-wrap">
+                <figure>
+                  <img src="img\potli\WhatsApp Image 2020-10-02 at 7.06.06 PM (2).jpeg" class="img-fluid" alt="">
+                  <a href="img\potli\WhatsApp Image 2020-10-02 at 7.06.06 PM (2).jpeg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                  <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+                </figure>
+
+                <div class="portfolio-info">
+                  <h4><a href="#">Purse</a></h4>
+                  <p>Purse</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
+              <div class="portfolio-wrap">
+                <figure>
+                  <img src="img\potli\WhatsApp Image 2020-10-02 at 7.06.06 PM.jpeg" class="img-fluid" alt="">
+                  <a href="img\potli\WhatsApp Image 2020-10-02 at 7.06.06 PM.jpeg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                  <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+                </figure>
+
+                <div class="portfolio-info">
+                  <h4><a href="#">Purse</a></h4>
+                  <p>Purse</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
+              <div class="portfolio-wrap">
+                <figure>
+                  <img src="img\potli\WhatsApp Image 2020-10-02 at 7.06.07 PM.jpeg" class="img-fluid" alt="">
+                  <a href="img\potli\WhatsApp Image 2020-10-02 at 7.06.07 PM.jpeg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                  <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+                </figure>
+
+                <div class="portfolio-info">
+                  <h4><a href="#">Purse</a></h4>
+                  <p>Purse</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
+              <div class="portfolio-wrap">
+                <figure>
+                  <img src="img\potli\WhatsApp Image 2020-10-02 at 7.17.15 PM.jpeg" class="img-fluid" alt="">
+                  <a href="img\potli\WhatsApp Image 2020-10-02 at 7.17.15 PM.jpeg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                  <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+                </figure>
+
+                <div class="portfolio-info">
+                  <h4><a href="#">Purse</a></h4>
+                  <p>Purse</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
+              <div class="portfolio-wrap">
+                <figure>
+                  <img src="img\potli\WhatsApp Image 2020-10-02 at 7.17.16 PM.jpeg" class="img-fluid" alt="">
+                  <a href="img\potli\WhatsApp Image 2020-10-02 at 7.17.16 PM.jpeg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                  <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+                </figure>
+
+                <div class="portfolio-info">
+                  <h4><a href="#">Purse</a></h4>
+                  <p>Purse</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
+              <div class="portfolio-wrap">
+                <figure>
+                  <img src="img\potli\WhatsApp Image 2020-10-02 at 7.17.17 PM (1).jpeg" class="img-fluid" alt="">
+                  <a href="img\potli\WhatsApp Image 2020-10-02 at 7.17.17 PM (1).jpeg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                  <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+                </figure>
+
+                <div class="portfolio-info">
+                  <h4><a href="#">Purse</a></h4>
+                  <p>Purse</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
+              <div class="portfolio-wrap">
+                <figure>
+                  <img src="img\potli\WhatsApp Image 2020-10-02 at 7.17.17 PM.jpeg" class="img-fluid" alt="">
+                  <a href="img\potli\WhatsApp Image 2020-10-02 at 7.17.17 PM.jpeg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                  <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+                </figure>
+
+                <div class="portfolio-info">
+                  <h4><a href="#">Purse</a></h4>
+                  <p>Purse</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
+              <div class="portfolio-wrap">
+                <figure>
+                  <img src="img\potli\WhatsApp Image 2020-10-02 at 7.17.18 PM.jpeg" class="img-fluid" alt="">
+                  <a href="img\potli\WhatsApp Image 2020-10-02 at 7.17.18 PM.jpeg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                  <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+                </figure>
+
+                <div class="portfolio-info">
+                  <h4><a href="#">Purse</a></h4>
+                  <p>Purse</p>
+                </div>
+              </div>
+            </div>
+
           
 
           
